<resources>
    <string name="app_name">Lawan Covid-19</string>
    <string name="jumlah_meninggal">Jumlah meninggal</string>
    <string name="jumlah_sembuh">Jumlah sembuh</string>
    <string name="jumlah_positif">Jumlah positif</string>
    <string name="nama_negara">Nama negara</string>
    <string name="stay_productive">Be Productive</string>
    <string name="data_provinsi">Data Provinsi</string>
    <string name="data_global">Data Global</string>
    <string name="data_per_provinsi">Data per-provinsi</string>
    <string name="statistik_hari_ini">Statistik hari ini</string>
    <string name="meninggal">Meninggal</string>
    <string name="sembuh">Sembuh</string>
    <string name="positif">Positif</string>
    <string name="_0">0</string>
    <string name="by_azmirf20">by azmirf20</string>
    <string name="made_with">Made with</string>
    <string name="provinsi">Provinsi</string>
    <string name="tanggal">Kamis, 23 April 2020</string>
    <string name="kasus_positif_covid_19">Kasus positif covid-19</string>
    <string name="layanan_bantuan">Layanan bantuan</string>
    <string name="statistik_internasional">Statistik internasional</string>
    <string name="deskripsi_statistik_inter">Statistik internasional berupa diagram dan perkembangan kasus</string>
    <string name="cek_disini">Cek disini</string>
    <string name="diagnosa_mandiri">Diagnosa mandiri</string>
    <string name="deskripsi_diagnosa">Pengecekan secara mandiri dengan untuk perlindungan kesehatan</string>
    <string name="belajar_android">Belajar android</string>
    <string name="baca_tutorial">Baca tutorial</string>
    <string name="belajar_website">Belajar website</string>
    <string name="baca_quran">Baca quran</string>
    <string name="aktif_github">Aktif github</string>
    <string name="deskripsi">Aplikasi ini dibuat bertujuan untuk memberikan informasi terkait jumlah terdata korban virus covid-19, dan membantu anda agar tetap produktif.</string>
    <string name="about">About</string>
    <string name="about_apps">About apps</string>
    <string name="credits_app">Credits App</string>
    <string name="aplikasi">Aplikasi</string>
    <string name="lawan_covid_19a">lawan covid-19</string>
    <string name="app_version_1_0">App version 1.0</string>
    <string name="flaticon">Flaticon</string>
    <string name="undraw_co">UnDraw.co</string>
    <string name="prixa_ai">prixa.ai</string>
    <string name="github_com">Github.com</string>
    <string name="quran">Kemenag</string>
    <string name="youtube_com">YouTube.com</string>
    <string name="tokopedia_com">Tokopedia.com</string>
    <string name="medium_com_chevalier_lab">medium.com/chevalier-lab</string>
    <string name="m_azmirizkifar20_gmail_com">m.azmirizkifar20@gmail.com</string>
    <string name="denger_tausiyah">Denger tausiyah</string>
    <string name="edukasi_corona">Edukasi corona</string>
    <string name="data_grafik">Data grafik</string>
    <string name="yuk_produktif">Yuk produktif</string>
    <string name="hotline">Hotline</string>
    <string name="grafik_nasional">Grafik nasional</string>
    <string name="berita_terkini">Berita terkini</string>
    <string name="denger_podcast">Denger podcast</string>
    <string name="dirumahaja_xyz">dirumahaja.xyz</string>
    <string name="back_button_description">Tombol untuk kembali ke halaman menu</string>
    <string name="sumber_kegiatan_produktif">Sumber kegiatan produktif</string>
    <string name="kumparan_com">Kumparan.com</string>
</resources>
