<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/layout_utama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FBFBFB"
            tools:context=".ui.global.GlobalActivity">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/gradient_blue"/>

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/back_button_description"
                android:src="@drawable/ic_arrow_back_white"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="270dp"
                android:layout_height="53dp"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                android:src="@drawable/header_global"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_hero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imageView2"
                android:layout_alignEnd="@+id/imageView2"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/data_global"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back"
                android:text="@string/tanggal"
                android:textColor="@android:color/white"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_kasus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tanggal"
                android:text="@string/kasus_positif_covid_19"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_positif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_kasus"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="24dp"
                android:textSize="36sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/tv_kasus"
                android:src="@drawable/virus" />

            <GridLayout
                android:id="@+id/grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_positif"
                android:layout_margin="16dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:rowCount="3"
                android:columnOrderPreserved="false">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginVertical="16dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_marginVertical="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sembuh"
                            android:textColor="@color/text_brown_prov"
                            android:textSize="16sp"/>

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/sembuh"/>

                        <TextView
                            android:id="@+id/tv_sembuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textSize="24sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorSembuh"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginVertical="16dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_marginHorizontal="6dp"
                            android:layout_marginVertical="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meninggal"
                            android:textColor="@color/text_brown_prov"
                            android:textSize="16sp"/>

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/meninggal"/>

                        <TextView
                            android:id="@+id/tv_meninggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textSize="24sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorMeninggal"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <TextView
                android:id="@+id/layanan_bantuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grid_view"
                android:text="@string/layanan_bantuan"
                android:textColor="@color/text_brown_prov"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_statistik_inter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layanan_bantuan"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="32dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/statistik_internasional"
                            android:layout_marginHorizontal="16dp"
                            android:textSize="14sp"
                            android:textColor="@color/text_brown_prov"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/text_brown"
                            android:textSize="12sp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/deskripsi_statistik_inter"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="0.8">

                        <Button
                            android:id="@+id/btn_statistik"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:textColor="@color/text_brown"
                            android:textAllCaps="false"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/button_radius_bordered"
                            android:text="@string/cek_disini"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_diagnosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardview_statistik_inter"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="18dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/diagnosa_mandiri"
                            android:layout_marginHorizontal="16dp"
                            android:textSize="14sp"
                            android:textColor="@color/text_brown_prov"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/text_brown"
                            android:textSize="12sp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/deskripsi_diagnosa"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="0.8">

                        <Button
                            android:id="@+id/btn_diagnosa"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:textColor="@color/text_brown"
                            android:textAllCaps="false"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/button_radius_bordered"
                            android:text="@string/cek_disini"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</layout>
